tests/invalid_ast_samples/73a79ca089e41554f52abac852d999fd1c8b6e0d87243cd1d03ac6fb2a066a8f.py
from ast import Assign
from ast import Constant
from ast import Load
from ast import Module
from ast import Name

tree = Module(
    body=[Assign(targets=[Constant(value=True)], value=Name(id="name_4", ctx=Load()))],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# True = name_4
#
#
# Error:
#     SyntaxError('cannot assign to True', ('<file>', 1, 1, 'True = name_4\n', 1, 5))
